# NBody

./: .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  imgui_log.txt
Nbody/assets/shaders/debug/: triangle_vs.glsl
Nbody/src/: main.cpp
Nbody/src/Core/: application.cpp  application.h  entry_point.cpp  game.cpp  game.h  layer.cpp  layer.h  log.cpp  log.h  resources.cpp  resources.h  window.h
Nbody/src/Engine/Core/: application.cpp  application.h  entry_point.cpp  imgui_layer.cpp  imgui_layer.h  input.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  window.h
Nbody/src/Engine/Events/: event_dispatcher.h  key_codes.h  key_events.cpp  key_events.h  mouse_events.h  window_events.cpp
Nbody/src/Engine/Platform/Linux/GLFW/: input_glfw.cpp  window_glfw.cpp  window_glfw.h
Nbody/src/Engine/Platform/OpenGL/: imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  opengl_graphics_context.cpp  opengl_graphics_context.h  opengl_index_buffer.cpp  opengl_index_buffer.h  opengl_renderer_api.cpp  opengl_renderer_api.h  opengl_shader.cpp  opengl_shader.h  opengl_texture.cpp  opengl_texture.h  opengl_vertex_array.cpp  opengl_vertex_array.h  opengl_vertex_buffer.cpp  opengl_vertex_buffer.h
Nbody/src/Engine/Renderer/: camera.cpp  camera.h  camera_controller.cpp  camera_controller.h  graphics_context.cpp  graphics_context.h  index_buffer.cpp  index_buffer.h  renderer.cpp  renderer.h  renderer_api.cpp  renderer_api.h  renderer_command.cpp  renderer_command.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
Nbody/src/Events/: event.cpp  event.h  event_dispatcher.h  key_events.cpp  key_events.h  mouse_events.cpp  mouse_events.h  window_events.h
Nbody/src/Platform/Linux/GLFW/: window_glfw.cpp  window_glfw.h
Nbody/src/Program/: draw_layer.cpp  draw_layer.h  gui_main.cpp  gui_main.h  mesh.cpp  mesh.h  openmp_simulation.cpp  openmp_simulation.h  sequential_simulation.cpp  sequential_simulation.h  simulation.h  simulation_test.cpp  simulation_test.h  simulation_utils.cpp  simulation_utils.h
Nbody/src/Program/Assets/Shaders/: basic.glsl  sphere_shader.glsl
Nbody/src/Program/NewSimulation/: new_simulation.cpp  new_simulation.h
Nbody/src/Program/OpenCLSimulation/: kernel.back  kernel.cl  opencl_particle.h  opencl_simulation.cpp  opencl_simulation.h
Nbody/src/Renderer/: renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
scripts/: build.sh  build_and_run.sh  run.sh
